--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     ]
   },
   "devDependencies": {
-    "http-proxy-middleware": "^0.20.0"
+    "http-proxy-middleware": "^0.20.0",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
