--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sea-music",
+  "name": "moment-music",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,11 +13,13 @@
     "@types/react-router-dom": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
+    "antd": "^3.26.6",
     "autoprefixer": "^9.6.1",
     "axios": "^0.19.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
+    "babel-plugin-import": "^1.13.0",
     "babel-plugin-named-asset-import": "^0.3.4",
     "babel-preset-react-app": "^9.0.2",
     "camelcase": "^5.2.0",
