--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/jest": "24.0.18",
     "@types/node": "12.7.8",
     "@types/react": "16.9.3",
+    "@types/react-custom-scrollbars": "^4.0.6",
     "@types/react-dom": "16.9.1",
     "@types/react-lazyload": "^2.6.0",
     "@types/react-redux": "^7.1.4",
@@ -57,6 +58,7 @@
     "precss": "^4.0.0",
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.3",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dev-utils": "^9.0.4",
     "react-dom": "^16.9.0",
     "react-lazyload": "^2.6.5",
