--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "precss": "^4.0.0",
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.3",
+    "react-content-loader": "^5.0.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dev-utils": "^9.0.4",
     "react-dom": "^16.9.0",
