--- a/package.json
+++ b/package.json
@@ -154,6 +154,11 @@
   },
   "devDependencies": {
     "http-proxy-middleware": "^0.20.0",
-    "redux-devtools-extension": "^2.13.8"
+    "os": "^0.1.1",
+    "progress-bar-webpack-plugin": "^2.1.0",
+    "redux-devtools-extension": "^2.13.8",
+    "speed-measure-webpack-plugin": "^1.3.3",
+    "thread-loader": "^2.1.3",
+    "webpack-notifier": "^1.8.0"
   }
 }
