--- a/package.json
+++ b/package.json
@@ -88,13 +88,6 @@
     ]
   },
   "devDependencies": {
-    "http-proxy-middleware": "^0.20.0",
-    "os": "^0.1.1",
-    "progress-bar-webpack-plugin": "^2.1.0",
-    "redux-devtools-extension": "^2.13.8",
-    "speed-measure-webpack-plugin": "^1.3.3",
-    "thread-loader": "^2.1.3",
-    "webpack-notifier": "^1.8.0",
     "@babel/core": "7.6.0",
     "@svgr/webpack": "4.3.2",
     "@types/jest": "24.0.18",
@@ -106,7 +99,6 @@
     "@types/react-router-dom": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
-    
     "autoprefixer": "^9.6.1",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
@@ -131,6 +123,7 @@
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-beta.5",
+    "http-proxy-middleware": "^0.20.0",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
     "jest": "24.9.0",
@@ -139,6 +132,7 @@
     "jest-watch-typeahead": "0.4.0",
     "mini-css-extract-plugin": "0.8.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
+    "os": "^0.1.1",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
@@ -146,18 +140,23 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
     "precss": "^4.0.0",
+    "progress-bar-webpack-plugin": "^2.1.0",
     "react-app-polyfill": "^1.0.3",
     "react-dev-utils": "^9.0.4",
+    "redux-devtools-extension": "^2.13.8",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
+    "speed-measure-webpack-plugin": "^1.3.3",
     "style-loader": "1.0.0",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
     "typescript": "3.6.3",
     "url-loader": "2.1.0",
     "webpack": "4.40.2",
+    "webpack-build-notifier": "^2.0.0",
+    "webpack-bundle-analyzer": "^3.6.1",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "4.3.1"
